Softened edges, fixed line spacing

--- a/static/style201607.css
+++ b/static/style201607.css
@@ -30,8 +30,7 @@ html {
     overflow-y:scroll;  /* persistent vertical scrollbars */
 }
 body {
-    font-size:16px;
-    font-weight:400;
+    font-size:14px;
     font-family:"Helvetica Neue","Source Sans Pro",Arial,"Liberation Sans",sans-serif;
     line-height:24px;
     margin:0px auto;
@@ -43,7 +42,7 @@ h1, h2, h3 {
     letter-spacing:-1px;
 }
 h1 {
-    font-size:32px;
+    font-size:28px;
 }
 h2 { 
     font-size:24px;
@@ -64,7 +63,7 @@ ul { list-style-type:circle; }
 #sandwich-wrapper {
     text-align:left;   /* ie6: centering */
     margin:0 auto;
-    width:780px;
+    width:720px;
 }
 
 
@@ -109,8 +108,8 @@ hr {
 }
 #sidebar header h1 {
     background:url("/logo-white-round.svg") top center no-repeat;
-    background-size:110px;
-    height:130px;
+    background-size:100px;
+    height:120px;
     position:relative;
 }
 #sidebar h1 a {
@@ -134,28 +133,28 @@ only screen and (min-device-pixel-ratio: 2) {
     font-size:13px;
     line-height:20px;
     padding-top:20px;
-    width:140px;
+    width:130px;
 }
 #sidebar #mascot {
     padding-top:10px;
-    width:140px;
+    width:130px;
 }
 #sidebar nav #topics { 
     display:none;
     visibility:hidden;
 }
 #sidebar nav ul {
-    border-top:1px solid #dce3ec;
-    box-shadow:4px 4px 0px #dce3ec;
-    text-align:center;
+    background:#ffffff;
+    box-shadow:3px 3px 10px #dcdddf;
+    margin-bottom:500px;
+    padding:4px 0;
 }
 #sidebar nav ul li a {
-    border:1px solid #dce3ec;
     background:#ffffff;
-    border-top:0px;
     display:block;
-    height:26px;
-    line-height:26px;
+    height:24px;
+    line-height:24px;
+    padding-left:20px;
 }
 #sidebar nav ul li a:hover {
     background:#0066ff;
@@ -164,26 +163,25 @@ only screen and (min-device-pixel-ratio: 2) {
 
 
 /* Navigation *****************************************************************************/
-#sidebar nav ul { margin-bottom:10px }
+#sidebar nav ul { margin-bottom:16px }
 #sidebar #primary-nav a { font-weight:bold }
 
 
 /* Main Content **************************************************************************/
 main {
-    margin-left:180px;
+    margin-left:160px;
 }
 
 
 /* Articles ******************************************************************************/
 article, .secondary { 
-    border:1px solid #dce3ec;
     background:#ffffff;
-    box-shadow:4px 4px 0px #dce3ec;
+    box-shadow:3px 3px 10px #dcdddf;
     margin-bottom:30px;
     padding:30px 30px 20px 30px;
 }
 article div,.secondary ul,.secondary p, #archive dl {
-    line-height:27px
+    line-height:24px
 }
 small time {
     text-transform:uppercase;
@@ -248,6 +246,7 @@ pre {
     float:left;
     margin-right:2px;
     padding:2px;
+    width:156px;
 }
 #omake-search input[type="submit"] {
     display:none;
@@ -264,7 +263,6 @@ pre {
 }
 .toggle-box + label + div {
   display: none;
-  //margin-bottom: 10px;
 }
 .toggle-box:checked + label + div { display: block }
 .toggle-box + label:before {
